# NFL-Big-Data-Bowl-2026

./: LICENSE  README.md  pyproject.toml  repo_settings.md  requirements.txt
notebooks/: Physics_informed_Transformer_Final_Final.ipynb  physics_informed_transformer.ipynb
src/bdb2026/: __init__.py  config.py  data.py  losses.py  model.py  train.py
